[package]
name = "pcap-file-ra"
version = "0.1.1"
authors = ["SEKINE, Hideki <sekineh@toyo.co.jp>"]
description = "provides random access to pcap files"
license = "MIT"

[dependencies]
pcap-file = "0.10.0"
serde = "1.0.70"
serde_derive = "1.0.70"
bincode = "1.0.1"
# log = "0.4.1"
# failure = "0.1.1"
# failure_derive = "0.1.1"

